--- a/lesson 1/5.html
+++ b/lesson 1/5.html
@@ -5,23 +5,36 @@
 
 	let $1, $2, $3, $4, $5, $6, number, firstSumm, secondSumm;
 
-	number = prompt('Введите номер вашего билета(6 цифр)');
+	function wrapper() {
+		number = prompt('Введите номер вашего билета(6 цифр)');
 
-	$1 = parseInt((number / 100000) % 10);
-	$2 = parseInt((number / 10000) % 10);
-	$3 = parseInt((number / 1000) % 10);
-	$4 = parseInt((number / 100) % 10);
-	$5 = parseInt((number / 10) % 10);
-	$6 = parseInt(number % 10);
+		if (number.length !== 6 || isNaN(number) || number < 0 || !isFinite(number)) {
+			alert('Номер билета не корректный, введите заново!');
+			wrapper();
+		}
 
-	firstSumm = $1 + $2 + $3;
-	secondSumm = $4 + $5 + $6;
+		else {
+			$1 = parseInt((number / 100000) % 10);
+			$2 = parseInt((number / 10000) % 10);
+			$3 = parseInt((number / 1000) % 10);
+			$4 = parseInt((number / 100) % 10);
+			$5 = parseInt((number / 10) % 10);
+			$6 = parseInt(number % 10);
 
-	if (firstSumm === secondSumm) {
-		alert('Поздравляем! У вас счатсливый билетик!');
+			firstSumm = $1 + $2 + $3;
+			secondSumm = $4 + $5 + $6;
+
+			if (firstSumm === secondSumm) {
+				alert('Поздравляем! У вас счатсливый билетик!');
+				wrapper();
+			}
+			else {
+				alert('Этот билетик не принеет счастья :c');
+				wrapper();
+			}
+		}
 	}
-	else {
-		alert('Этот билетик не принеет счастья :c');
-	}
+
+	wrapper();
 
 </script>
