--- a/lesson 1/5.html
+++ b/lesson 1/5.html
@@ -25,16 +25,16 @@
 			secondSumm = $4 + $5 + $6;
 
 			if (firstSumm === secondSumm) {
-				alert('Поздравляем! У вас счатсливый билетик!');
+				alert('Поздравляем! У вас счастливый билетик!');
 				wrapper();
 			}
 			else {
-				alert('Этот билетик не принеет счастья :c');
+				alert('Этот билетик не принесет счастья :c');
 				wrapper();
 			}
 		}
 	}
-
+	
 	wrapper();
 
 </script>
